--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Nurul Syafiqah</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -15,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Nurul!</h1>
-				<p>I'm still learning <em> Programming</em> and I am enjoying so far. <a href="/about">Read more about my work.</a></p>
+				<p>I'm still learning <em> Programming</em> and I am enjoying them so far. <a href="/about">Read more about my work.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
